2025-02-03T01:05:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104344411 # 554
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 204 235 / 205 236
* notice: next accum: outdated-unq outdated-all / unq all: 205 236 / 211 243
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [2024-10-13] / [2025-02-02]

2024-10-14T01:46:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11319637885 # 448
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 203 234 / 204 235
* notice: next accum: outdated-unq outdated-all / unq all: 204 235 / 205 236
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-27] / [2024-10-13]

2024-10-03T01:43:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11154434617 # 437
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-03
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 202 233 / 204 235
* notice: next accum: outdated-unq outdated-all / unq all: 203 234 / 204 235
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-18] / []

2024-09-30T01:47:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097927254 # 434