@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-03T01:05:47Z",
+  "timestamp" : "2025-02-04T01:04:47Z",
   "count_outdated" : 236,
   "uniques_outdated" : 205,
-  "count" : 243,
-  "uniques" : 211,
+  "count" : 245,
+  "uniques" : 213,
   "clones" : [
     {
       "timestamp": "2025-02-02T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 6,
       "uniques_minmax": [ 6, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
