@@ -1,11 +1,16 @@
 {
-  "count": 7,
-  "uniques": 6,
+  "count": 9,
+  "uniques": 8,
   "clones": [
     {
       "timestamp": "2025-02-02T00:00:00Z",
       "count": 7,
       "uniques": 6
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
